# pyslime

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
pyslime/: __init__.py  fields.py  pipelineUtils.py  slime.py  slimeVis.py  utils.py
pyslime/paper/notebooks/: histogram.ipynb  peng_plot.ipynb  slime_dist_powerlaws.ipynb
pyslime/pipeline/: TODO.md  catalogs.py  interpolate.py  pipeline.py  pipelineUtils.py  run_pipeline.py
pyslime/pipeline/data/: mapfunc_z0p0.pickle  mapfunc_z0p5.pickle  mapping_BP_z0p0_1sigma.pick  mapping_BP_z0p5_1sigma.pick  mattPlusJoeVACfixes_2021aug13.fits  transform_tabl_all.csv
pyslime/pipeline/notebooks/: calibrate-bphalos-to-sdss.ipynb  get_distributions.ipynb  interpolate.ipynb  mapSlimeBP.ipynb  mapSlimeBP_z0_test.ipynb  mapSlimeBP_zp5.ipynb  optimal_transport.ipynb  query-slime-at-galaxies.ipynb  standardize_generic.ipynb  standardize_sdss.ipynb  xmatch_tables.ipynb
pyslime/pipeline/notebooks/dev-notebooks/: calibrate-bphalos-to-sdss.ipynb  dask_loading.ipynb  get_distributions.ipynb  image-bpslime-density.ipynb  image-lrg-density.ipynb  image-sdss-density.ipynb  make_cat_LRG-SGC.ipynb  old_standardize_sdss.ipynb  optimal_transport.ipynb  query-slime-at-galaxies.ipynb  rerouting-to-data.ipynb  standardize_LRG-NGC.ipynb  standardize_generic.ipynb  standardize_sdss.ipynb  xmatch_tables.ipynb
pyslime/scripts/: plot_distribution.py
