[metadata]
name = pypeit
description = PypeIt Spectroscopic Reduction
long_description = file: README.md
long_description_content_type = text/markdown
author = PypeIt Collaboration
author_email = jnb@nmsu.edu
license = BSD-3
url = https://github.com/mattcwilde/pyslime
edit_on_github = False
github_project = mattcwilde/pyslime
keywords = astronomy, cosmology, dark matter
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: Documentation :: Sphinx
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces

[options]
include_package_data = True

scripts =
    bin/pyslime_plot_distribution